--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ header.hero-img {
 	position: relative;
 	width: 100%;
 	height: 100vh;
-	background-image: url("../img/medjugorie.jpg");
+	background-image: url("../img/medjugorie-mass.jfif");
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
@@ -234,6 +234,6 @@ header.hero-img .fa-chevron-down {
 }
 @media (min-width: 1200px) {
 	header.hero-img {
-		background-image: url("../img/medjugorie.jpg");
+		background-image: url("../img/medjugorie-mass.jfif");
 	}
 }
