--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,13 @@ body {
 	margin: 0 auto 40px;
 	background-color: var(--main-color);
 }
+header {
+	height: 100vh;
+}
+nav {
+	display: none;
+}
+
 header.hero-img {
 	position: relative;
 	width: 100%;
@@ -119,7 +126,7 @@ header.hero-img .fa-chevron-down {
 	}
 }
 .prices .price-box {
-	margin: 20px;
+	margin: 20px 10px;
 	padding: 40px 40px;
 	background: var(--white);
 	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
