--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ body {
 .section-title {
 	text-align: center;
 	text-transform: uppercase;
+	font-size: 34px;
 }
 .underline {
 	width: 60px;
@@ -34,13 +35,13 @@ body {
 	margin: 0 auto 40px;
 	background-color: var(--main-color);
 }
-header {
-	height: 100vh;
-}
 nav {
 	display: none;
 }
 
+header {
+	height: 100vh;
+}
 header.hero-img {
 	position: relative;
 	width: 100%;
@@ -56,9 +57,12 @@ header.hero-img h1 {
 	text-transform: uppercase;
 	color: var(--white);
 	letter-spacing: 2px;
+	font-size: 36px;
 }
 header.hero-img p {
 	color: var(--white);
+	padding: 20px;
+	font-size: 18px;
 }
 header.hero-img .hero-text {
 	display: flex;
@@ -77,25 +81,33 @@ header.hero-img .hero-shadow {
 	z-index: -5;
 	background-color: rgba(0, 0, 0, 0.88);
 }
-header.hero-img .fa-chevron-down {
-	position: absolute;
-	left: 50%;
-	bottom: 20px;
-	translate: -50%;
-	font-size: 30px;
-	color: var(--white);
-}
 
-.about-us i {
-	margin-top: 20px;
-	font-size: 26px;
+.about-us .about-us-info {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin: 0 auto;
+	padding: 20px 30px;
+	width: 40%;
+	min-width: 300px;
+	min-height: 250px;
+	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+	border-radius: 10px;
 }
-.about-us .about-us-cart-title {
-	font-size: 18px;
+.about-us i {
+	font-size: 26px;
+	color: var(--main-color);
+}
+.about-us h3 {
+	font-size: 30px;
 	text-transform: uppercase;
+	text-align: center;
 }
 .about-us .about-us-cart-text {
-	font-size: 14px;
+	font-size: 18px;
+	margin-bottom: 20px;
+	margin-top: -16px;
 }
 .about-us .about-us-hover {
 	transition: color 0.2s;
@@ -110,21 +122,14 @@ header.hero-img .fa-chevron-down {
 	gap: 30px;
 	margin: 80px 0 80px;
 }
-.about-us .about-us-info {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	margin: 0 auto;
-	width: 40%;
-	min-width: 300px;
-	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-	border-radius: 10px;
-
-	h3 {
-		text-align: center;
-	}
+.about-us ul {
+	list-style-type: none;
+	text-align: center;
+	padding-left: 0;
+	padding: 10px 30px;
+	font-size: 20px;
 }
+
 .prices .price-box {
 	margin: 20px 10px;
 	padding: 40px 40px;
@@ -135,41 +140,32 @@ header.hero-img .fa-chevron-down {
 .prices .price-box span {
 	font-weight: bold;
 }
-.prices .price-box i {
-	font-size: 24px;
-	padding: 0 5px;
-}
-.prices .price-box button {
-	font-size: 18px;
-	text-transform: uppercase;
-	padding: 10px 20px;
+.prices .price-box hr {
+	margin-bottom: 30px;
 }
 .prices .price-box:hover {
 	scale: 1.03;
 }
-.prices .price-title {
+.prices .price-box p {
+	font-size: 20px;
+}
+.prices .price-box .price-title {
 	color: var(--main-color);
 	text-transform: uppercase;
 	font-weight: bold;
-	font-size: 20px;
-}
-.prices .price-tag {
-	font-size: 30px;
-	font-weight: bold;
+	font-size: 24px;
 }
 .prices .price-info {
 	margin-top: 30px;
 }
-.prices .price-info a {
-	text-decoration: none;
-}
 .journey-schedule {
 	display: flex;
 
-	 div {
+	div {
 		border-radius: 10px;
 	}
 }
+
 .contact {
 	position: relative;
 	padding: 30px;
@@ -186,39 +182,33 @@ header.hero-img .fa-chevron-down {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.88);
+	background-color: rgba(0, 0, 0, 0.89);
 	z-index: -5;
 }
 .contact .underline {
 	background-color: var(--light-gray);
 }
-.contact .contact-us {
-	margin: 30px 0;
-}
-.contact h3 {
-	margin-bottom: 15px;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-}
-.contact i {
-	font-size: 26px;
-	color: var(--light-gray);
-	transition: color 0.25s;
-}
-.contact i:hover {
+.contact h4 {
+	font-size: 28px;
 	color: var(--main-color);
 }
-
+.contact .contact-us {
+	margin: 30px 0;
+	font-size: 20px;
+}
 .contact a {
 	text-decoration: underline;
 	color: inherit;
 }
+.contact h6 {
+	font-size: 19px;
+}
 
-@media (min-width: 768px) {
-	.hero-text h1 {
-		font-size: 42px;
+@media screen and (min-width: 768px) {
+	header.hero-img h1 {
+		font-size: 44px;
 	}
-	.hero-text p {
-		font-size: 20px;
+	header.hero-img p {
+		font-size: 22px;
 	}
 }
