--- a/css/style.css
+++ b/css/style.css
@@ -83,17 +83,48 @@ header.hero-img .hero-shadow {
 }
 
 .about-us .about-us-info {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
 	margin: 0 auto;
-	padding: 20px 30px;
+	padding: 10px 30px;
 	width: 40%;
 	min-width: 300px;
-	min-height: 250px;
+	height: 280px;
 	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 	border-radius: 10px;
+}
+@media screen and (min-width: 1200px) {
+	.about-us .about-us-info {
+		height: 225px;
+	}
+}
+.about-us .price-info-header {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 20px;
+}
+.about-us .price-info-content {
+	position: relative;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+	margin: 20px 0;
+
+	h3 {
+		position: absolute;
+		top: -20px;
+	}
+
+	p {
+		margin-top: 70px;
+	}
+}
+@media screen and (min-width: 992px) {
+	.about-us .price-info-content {
+		p {
+			margin-top: 30px;
+		}
+	}
 }
 .about-us i {
 	font-size: 26px;
