--- a/css/information.css
+++ b/css/information.css
@@ -1,4 +1,4 @@
-.about-us .about-us-info {
+.information .information-box {
 	margin: 0 auto;
 	padding: 10px 30px;
 	width: 40%;
@@ -8,17 +8,17 @@
 	border-radius: 10px;
 }
 @media screen and (min-width: 1200px) {
-	.about-us .about-us-info {
+	.information .information-box {
 		height: 225px;
 	}
 }
-.about-us .price-info-header {
+.information .box-header {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	margin-top: 20px;
 }
-.about-us .price-info-content {
+.information .box-content {
 	position: relative;
 	display: flex;
 	align-items: center;
@@ -36,48 +36,42 @@
 	}
 }
 @media screen and (min-width: 992px) {
-	.about-us .price-info-content {
+	.information .box-content {
 		p {
 			margin-top: 30px;
 		}
 	}
 }
-.about-us i {
+.information i {
 	font-size: 26px;
 	color: var(--main-color);
 }
-.about-us h3 {
+.information h3 {
 	font-size: 30px;
 	text-transform: uppercase;
 	text-align: center;
 }
-.about-us h3.date {
+.information h3.date {
 	margin-top: 20px;
 }
 @media screen and (min-width: 767px) {
-	.about-us h3.date {
+	.information h3.date {
 		margin-top: 0;
 	}
 }
-.about-us .about-us-cart-text {
+.information .information-cart-text {
 	font-size: 18px;
 	margin-bottom: 20px;
 	margin-top: -16px;
 }
-.about-us .about-us-hover {
-	transition: color 0.2s;
-}
-.about-us .about-us-hover:hover {
-	color: var(--main-color);
-}
-.about-us .price-info {
+.information .box {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
 	gap: 30px;
 	margin: 80px 0 80px;
 }
-.about-us ul {
+.information ul {
 	list-style-type: none;
 	text-align: center;
 	padding-left: 0;
