--- a/css/schedule.css
+++ b/css/schedule.css
@@ -1,34 +1,34 @@
-.prices .price-box {
-	margin: 20px 10px;
-	padding: 40px 40px;
-	background: var(--white);
-	transition: scale 0.3s;
-}
-.prices .price-box span {
-	font-weight: bold;
-}
-.prices .price-box hr {
-	margin-bottom: 30px;
-}
-.prices .price-box:hover {
-	scale: 1.03;
-}
-.prices .price-box p {
-	font-size: 20px;
-}
-.prices .price-box .price-title {
-	color: var(--main-color);
-	text-transform: uppercase;
-	font-weight: bold;
-	font-size: 24px;
-}
-.prices .price-info {
-	margin-top: 30px;
-}
-.journey-schedule {
+.schedule .schedule-container {
 	display: flex;
 
 	div {
 		border-radius: 10px;
 	}
+}
+.schedule .schedule-box {
+	margin: 20px 10px;
+	padding: 40px 40px;
+	background: var(--white);
+	transition: scale 0.3s;
+}
+.schedule .schedule-box span {
+	font-weight: bold;
+}
+.schedule .schedule-box hr {
+	margin-bottom: 30px;
+}
+.schedule .schedule-box:hover {
+	scale: 1.03;
+}
+.schedule .schedule-box p {
+	font-size: 20px;
+}
+.schedule .schedule-box .schedule-box-title {
+	color: var(--main-color);
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 24px;
+}
+.schedule .schedule-info {
+	margin-top: 30px;
 }
