--- a/css/information.css
+++ b/css/information.css
@@ -1,10 +1,18 @@
+.information .box {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-between;
+	gap: 30px;
+	margin: 80px 0 80px;
+}
+
 .information .information-box {
-	margin: 0 auto;
 	padding: 10px 30px;
 	width: 40%;
 	min-width: 300px;
 	height: 280px;
-	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+	box-shadow: var(--shadow);
 	border-radius: 10px;
 }
 @media screen and (min-width: 1200px) {
@@ -54,27 +62,59 @@
 .information h3.date {
 	margin-top: 20px;
 }
-@media screen and (min-width: 767px) {
-	.information h3.date {
-		margin-top: 0;
-	}
-}
 .information .information-cart-text {
 	font-size: 18px;
 	margin-bottom: 20px;
 	margin-top: -16px;
 }
-.information .box {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	gap: 30px;
-	margin: 80px 0 80px;
-}
+
 .information ul {
 	list-style-type: none;
 	text-align: center;
-	padding-left: 0;
-	padding: 10px 30px;
+	padding: 10px 0px;
 	font-size: 20px;
+}
+
+.information li {
+	display: flex;
+	gap: 10px;
+	flex-direction: column;
+	align-items: center;
+	background-color: #fff;
+	padding: 30px 20px;
+	text-align: center;
+	margin: 20px 0;
+	border-radius: 16px;
+	box-shadow: #21212310 0px 7px 29px 0px;
+
+	i {
+		width: 30px;
+		height: 30px;
+		background-color: var(--main-color);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border-radius: 50%;
+		color: white;
+		font-size: 15px;
+	}
+
+	p {
+		margin-bottom: 0;
+	}
+}
+
+@media screen and (min-width: 767px) {
+	.information h3.date {
+		margin-top: 0;
+	}
+
+	.information ul {
+		text-align: left;
+	}
+
+	.information li {
+		flex-direction: row;
+		align-items: center;
+	}
 }
