--- a/css/information.css
+++ b/css/information.css
@@ -13,7 +13,8 @@
 	min-width: 300px;
 	height: 280px;
 	box-shadow: var(--shadow);
-	border-radius: 10px;
+	border-radius: 16px;
+	background-color: #fff;
 }
 @media screen and (min-width: 1200px) {
 	.information .information-box {
