--- a/css/gallery.css
+++ b/css/gallery.css
@@ -134,7 +134,7 @@
 		transition: opacity 0.25s ease;
 	}
 
-	&::before:not(.e) {
+	&::before {
 		content: attr(data-desc);
 		position: absolute;
 		left: 0;
