--- a/css/information.css
+++ b/css/information.css
@@ -1,4 +1,9 @@
-.information .box {
+.information {
+	background-color: var(--color-bg);
+	color: var(--color-font-white);
+}
+
+.information .boxes {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
@@ -8,26 +13,58 @@
 }
 
 .information .information-box {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	position: relative;
 	padding: 10px 30px;
 	width: 40%;
 	min-width: 300px;
 	height: 280px;
-	box-shadow: var(--shadow);
+	box-shadow: #21212310 0px 7px 29px 0px;
+
+	border: var(--border);
 	border-radius: 16px;
-	background-color: #fff;
+	background-color: var(--color-bg-lighter);
 }
+
+.information .information-box::before {
+	content: "DATA";
+	display: flex;
+	font-size: 20px;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	width: 60%;
+	height: 40px;
+	left: 50%;
+	top: -10px;
+	transform: translateX(-50%);
+	background-color: var(--color-bg);
+	border-radius: 0 0 16px 16px;
+	border: var(--border);
+}
+
+.information .information-box:nth-child(2)::before {
+	content: "CENA";
+}
+
 @media screen and (min-width: 1200px) {
 	.information .information-box {
 		height: 225px;
 	}
 }
-.information .box-header {
+
+/* .information .box-header {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	margin-top: 20px;
-}
+} */
+
 .information .box-content {
+	width: 100%;
 	position: relative;
 	display: flex;
 	align-items: center;
@@ -36,14 +73,22 @@
 	margin: 20px 0;
 
 	h3 {
-		position: absolute;
-		top: -20px;
+		background: var(--gradient-primary);
+		background-clip: text;
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+		text-transform: uppercase;
+		font-size: 30px;
+		font-weight: 900;
+		letter-spacing: 2px;
 	}
 
 	p {
-		margin-top: 70px;
+		position: absolute;
+		top: 80px;
 	}
 }
+
 @media screen and (min-width: 992px) {
 	.information .box-content {
 		p {
@@ -51,18 +96,25 @@
 		}
 	}
 }
-.information i {
+
+.information .information-box i {
 	font-size: 26px;
-	color: var(--main-color);
+	background: var(--gradient-primary);
+	background-clip: text;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
+
 .information h3 {
 	font-size: 30px;
 	text-transform: uppercase;
 	text-align: center;
 }
+
 .information h3.date {
 	margin-top: 20px;
 }
+
 .information .information-cart-text {
 	font-size: 18px;
 	margin-bottom: 20px;
@@ -81,17 +133,22 @@
 	gap: 10px;
 	flex-direction: column;
 	align-items: center;
-	background-color: #fff;
+	background-color: var(--color-bg-lighter);
 	padding: 30px 20px;
 	text-align: center;
 	margin: 20px 0;
 	border-radius: 16px;
 	box-shadow: #21212310 0px 7px 29px 0px;
+	border: var(--border);
+
+	.icon {
+		border-radius: 50%;
+		background-image: var(--gradient-primary);
+	}
 
 	i {
 		width: 30px;
 		height: 30px;
-		background-color: var(--main-color);
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -121,7 +178,7 @@
 }
 
 @media screen and (max-width: 767px) {
-	.information .box {
+	.information .boxes {
 		flex-direction: column;
 		align-items: center;
 	}
