--- a/css/information.css
+++ b/css/information.css
@@ -13,37 +13,35 @@
 }
 
 .information .information-box {
+	position: relative;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
-	position: relative;
 	padding: 10px 30px;
 	width: 40%;
 	min-width: 300px;
 	height: 280px;
-	box-shadow: #21212310 0px 7px 29px 0px;
-
+	background-color: var(--color-bg-lighter);
 	border: var(--border);
 	border-radius: 16px;
-	background-color: var(--color-bg-lighter);
+	box-shadow: #21212310 0px 7px 29px 0px;
 }
 
 .information .information-box::before {
 	content: "DATA";
-	display: flex;
-	font-size: 20px;
-	justify-content: center;
-	align-items: center;
 	position: absolute;
-	width: 60%;
-	height: 40px;
 	left: 50%;
 	top: -10px;
-	transform: translateX(-50%);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 60%;
+	height: 40px;
+	font-size: 20px;
 	background-color: var(--color-bg);
-	border-radius: 0 0 16px 16px;
 	border: var(--border);
+	border-radius: 0 0 16px 16px;
+	transform: translateX(-50%);
 }
 
 .information .information-box:nth-child(2)::before {
@@ -56,13 +54,6 @@
 	}
 }
 
-/* .information .box-header {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin-top: 20px;
-} */
-
 .information .box-content {
 	width: 100%;
 	position: relative;
@@ -70,7 +61,7 @@
 	align-items: center;
 	flex-direction: column;
 	justify-content: center;
-	margin: 20px 0;
+	margin: 30px 0 0;
 
 	h3 {
 		background: var(--gradient-primary);
@@ -81,44 +72,14 @@
 		font-size: 30px;
 		font-weight: 900;
 		letter-spacing: 2px;
+		margin: 0;
 	}
-
-	p {
-		position: absolute;
-		top: 80px;
-	}
-}
-
-@media screen and (min-width: 992px) {
-	.information .box-content {
-		p {
-			margin-top: 30px;
-		}
-	}
-}
-
-.information .information-box i {
-	font-size: 26px;
-	background: var(--gradient-primary);
-	background-clip: text;
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
 }
 
 .information h3 {
 	font-size: 30px;
 	text-transform: uppercase;
 	text-align: center;
-}
-
-.information h3.date {
-	margin-top: 20px;
-}
-
-.information .information-cart-text {
-	font-size: 18px;
-	margin-bottom: 20px;
-	margin-top: -16px;
 }
 
 .information ul {
@@ -163,10 +124,6 @@
 }
 
 @media screen and (min-width: 767px) {
-	.information h3.date {
-		margin-top: 0;
-	}
-
 	.information ul {
 		text-align: left;
 	}
