--- a/css/information.css
+++ b/css/information.css
@@ -40,6 +40,7 @@
 	width: 60%;
 	height: 40px;
 	font-size: 20px;
+	font-weight: 900;
 	background-color: var(--color-bg);
 	border: var(--border);
 	border-radius: 4px 4px 16px 16px;
