--- a/css/main.css
+++ b/css/main.css
@@ -22,11 +22,12 @@
 	);
 	--color-font-white: #e6f1ff;
 	--color-font-secondary: #b8c5d6;
-	--shadow-primary: 0 10px 30px rgba(3, 157, 255, 0.1),
+	--shadow-primary: 0 10px 30px #039dff1a,
 		0 4px 12px rgba(0, 0, 0, 0.35);
-	--shadow-lighter: 0 6px 18px rgba(0, 0, 0, 0.25);
+	--shadow-lighter: 0 6px 18px #00000040;
 	--color-main-accent: #039dff;
-	--border: 1px solid rgba(255, 255, 255, 0.05);
+	--border: 1px solid #ffffff0d;
+	--border-color: #ffffff0d;
 }
 
 html {
