--- a/css/schedule.css
+++ b/css/schedule.css
@@ -48,3 +48,116 @@
 .schedule .schedule-info {
 	margin-top: 30px;
 }
+
+.timeline-container {
+	display: flex;
+	justify-content: center;
+}
+
+.timeline {
+	position: relative;
+	width: 6px;
+	height: 1500px;
+	background-color: var(--border-color);
+	margin: 30px 0;
+	border-radius: 10px;
+	box-shadow: var(--shadow-primary);
+}
+
+.timeline-item {
+	position: absolute;
+	width: 500px;
+	padding: 62px 10px 32px;
+	border: var(--border);
+	box-shadow: var(--shadow-lighter);
+	border-radius: 16px;
+
+	display: flex;
+	align-items: center;
+}
+
+.timeline-item.item1 {
+	top: 50px;
+	right: 60px;
+}
+
+.timeline-item.item2 {
+	left: 60px;
+	top: 200px;
+}
+
+.timeline .arrow {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	background-color: red;
+	width: 30px;
+	height: 30px;
+	rotate: 45deg;
+	background-color: var(--color-bg-lighter);
+	border: var(--border);
+}
+
+.timeline .item1 .arrow {
+	right: -5px;
+	border-left: none;
+	border-bottom: none;
+}
+
+.timeline .item2 .arrow {
+	left: -26px;
+	border-right: none;
+	border-top: none;
+}
+
+.timeline-item::before {
+	position: absolute;
+	left: 50%;
+	top: -10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 60%;
+	height: 40px;
+	font-size: 20px;
+	background-color: var(--color-bg);
+	border: var(--border);
+	border-radius: 4px 4px 16px 16px;
+	transform: translateX(-50%);
+	font-weight: 900;
+}
+
+.timeline-item.item1::before {
+	content: "DZIEŃ 1";
+}
+
+.timeline-item.item2::before {
+	content: "DZIEŃ 2";
+}
+
+.timeline-item::after {
+	content: "";
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 40px;
+	height: 40px;
+	background-image: var(--gradient-primary);
+	border-radius: 50%;
+	border: 8px solid var(--color-bg-lighter);
+}
+
+.timeline-item.item1::after {
+	right: -78px;
+}
+
+.timeline-item.item2::after {
+	left: -78px;
+}
+
+.timeline-item ul {
+	list-style-type: none;
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+}
