--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,9 @@
 	--shadow-primary: 0 10px 30px #039dff1a,
 		0 4px 12px rgba(0, 0, 0, 0.35);
 	--shadow-lighter: 0 6px 18px #00000040;
+	--shadow-color-bg: 0 6px 18px #0f0f2a;
 	--color-main-accent: #039dff;
-	--border: 1px solid #ffffff0d;
+	--border: 1px solid var(--border-color);
 	--border-color: #ffffff0d;
 }
 
